--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 
 
@@ -41,4 +42,19 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* header related style */
+
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px ;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-pic{
+    width: 500px;
+
 }
