--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,7 +101,10 @@ nav a {
 }
 
 /* main section styles */
-
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
@@ -109,4 +112,11 @@ nav a {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px ;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
